--- a/sample-config.env
+++ b/sample-config.env
@@ -1,15 +1,15 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.config.env to config.env ____
+no# ____REMOVE THIS LINE AFTER RENAMING sample.config.env to config.env ____
 SESSION_ID=
 MONGO_URI=
 OWNER_NUMER=
-THUMB_IMAGE = "https://raw.githubusercontent.com/SecktorBot/Brandimages/main/logos/SocialLogo%201.png"
+THUMB_IMAGE = "https://raw.githubusercontent.com/X-E-N-OS-I-R/Brandimages/main/logos/SocialLogo%201.png"
 port = 5000
-email = "sam@secktor.live"
+email = "xenosir23@gmail.com"
 AUTO_BIO=false
-global_url = "instagram.com"
-OWNER_NAME = "SamPandey001"
+global_url = "www.instagram.com/tbz_xeno_xir_"
+OWNER_NAME = "XENO SIR"
 AUTO_REACTION = false
-FAKE_COUNTRY_CODE = 92
+FAKE_COUNTRY_CODE = 91
 READ_MESSAGE = false
 PREFIX = .
 WARN_COUNT = 3
@@ -19,5 +19,5 @@ LEVEL_UP_MESSAGE= true
 WELCOME_MESSAGE =  "*Hi,* @user \n*Welcome in* @gname \n*Member count* : @count th"
 THEME= SECKTOR
 WORKTYPE = public
-PACK_INFO = "Sam;Pandey"
+PACK_INFO = "XENO XD;XENO SIR"
 ANTILINK_VALUES = "chat.whatsapp.com"
